--- a/index.html
+++ b/index.html
@@ -91,8 +91,16 @@
         <button type="submit">Upload File</button>
     </form>
 
+    <h2>Get User Data Files</h2>
+    <form id="getDataFilesForm">
+        <label for="dataFilesUserID">User ID:</label>
+        <input type="text" id="dataFilesUserID" name="UserID" required><br><br>
+        <button type="submit">Get Data Files</button>
+    </form>
+
     <div id="uploadResult"></div>
     <div id="results"></div>
+    <div id="dataFilesResult"></div>
 
     <script>
         document.getElementById('userRegistrationForm').addEventListener('submit', async (e) => {
@@ -179,11 +187,15 @@
         document.getElementById('fileUploadForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const formData = new FormData(e.target);
+            const userData = Object.fromEntries(formData);
 
             try {
-                const response = await fetch('/import-file', {
+                const response = await fetch('/get-data-files', {
                     method: 'POST',
-                    body: formData,
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(userData),
                 });
                 const data = await response.json();
                 
@@ -205,6 +217,43 @@
             } catch (error) {
                 console.error('Error:', error);
                 document.getElementById('uploadResult').innerHTML = '<p>An error occurred while uploading the file.</p>';
+            }
+        });
+
+        document.getElementById('getDataFilesForm').addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(e.target);
+            const queryParams = new URLSearchParams(formData);
+
+            try {
+                const response = await fetch(`/get-data-files?${queryParams}`);
+                const data = await response.json();
+                
+                if (response.ok) {
+                    let resultHTML = '<h3>User Data Files:</h3>';
+                    if (data.length === 0) {
+                        resultHTML += '<p>No files found for this user.</p>';
+                    } else {
+                        resultHTML += '<ul>';
+                        data.forEach(file => {
+                            resultHTML += `
+                                <li>
+                                    <strong>Filename:</strong> ${file.filename}<br>
+                                    <strong>Type:</strong> ${file.file_type}<br>
+                                    <strong>Path:</strong> ${file.file_path}<br>
+                                    <strong>Uploaded at:</strong> ${new Date(file.uploaded_at).toLocaleString()}
+                                </li>
+                            `;
+                        });
+                        resultHTML += '</ul>';
+                    }
+                    document.getElementById('dataFilesResult').innerHTML = resultHTML;
+                } else {
+                    document.getElementById('dataFilesResult').innerHTML = `<p>Error: ${data.error}</p>`;
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('dataFilesResult').innerHTML = '<p>An error occurred while fetching data files.</p>';
             }
         });
     </script>
